# combiner

./: .gitignore  Cargo.toml  LICENSE  README.md  combiner.toml  default.nix  go.mod  go.sum  install.sh  shell.nix
cmd/combiner/: main.go
internal/config/: config.go
internal/ignore/: ignore.go  ignore_test.go
internal/statistics/: statistics.go
internal/tokenization/: tokenization.go
internal/traversal/: traversal.go
src/: config.rs  error.rs  file_processing.rs  lib.rs  main.rs  output.rs  statistics.rs  tokenization.rs  tokenizer.rs
tests/: tests.rs
