[package]
name = "combiner"
version = "0.2.0"
edition = "2021"
authors = ["jesalpatelx@gmail.com"]
description = "A tool for recursively combining text files in a directory"
license = "MIT"
repository = "https://github.com/Jesalx/combiner"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
anyhow = "1.0"
once_cell = "1.19"
tiktoken-rs = "0.5"

[[bin]]
name = "combiner"
path = "src/main.rs"
