[package]
name = "combiner"
version = "0.1.7"
edition = "2021"
authors = ["jesalpatelx@gmail.com"]
description = "A tool for recursively combining text files in a directory"
license = "MIT"
repository = "https://github.com/Jesalx/combiner"
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
anyhow = "1.0"
ignore = "0.4"
prettytable-rs = "0.10"
tiktoken-rs = "0.5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"

[[bin]]
name = "combiner"
path = "src/main.rs"
