[package]
name = "combiner"
version = "0.2.2"
edition = "2021"
authors = ["jesalpatelx@gmail.com"]
description = "Combiner is a Rust-based command-line tool that processes text files in a given directory, combining their contents into a single output file."
license = "MIT"
repository = "https://github.com/Jesalx/combiner"
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3"
anyhow = "1.0"
ignore = "0.4"
prettytable-rs = "0.10"
tiktoken-rs = "0.5.0"
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"

[[bin]]
name = "combiner"
path = "src/main.rs"
